[package]
name = "sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.2"
bevy_egui = "0.27.1"
bevy_pancam = "0.11.1"
bevy_tiling_background = "0.10.0"
rand = "0.8.5"
random_name_generator = "0.3.6"

